src/test/deca/context/invalid/langage_essentiel/deuxieme_passe/regle_2_6.deca
// Description:
//    regle 2.6 opération partielle
//
// Resultats:
//    Ligne 9: Method 'f' already defined.
class A {
    void f(){
    }
    int f(){
    }
}